--- a/票卡详情_1.html
+++ b/票卡详情_1.html
@@ -188,7 +188,7 @@
       <div id="u1527" class="ax_default label">
         <div id="u1527_div" class=""></div>
         <div id="u1527_text" class="text ">
-          <p><span style="text-decoration:none;">购买用户昵称：&nbsp; &nbsp; &nbsp;&nbsp; 任天堂</span></p>
+          <p><span style="text-decoration:none;">购卡用户昵称：&nbsp; &nbsp; &nbsp;&nbsp; 任天堂</span></p>
         </div>
       </div>
 
