--- a/订单详情.html
+++ b/订单详情.html
@@ -200,7 +200,7 @@
       <div id="u647" class="ax_default label">
         <div id="u647_div" class=""></div>
         <div id="u647_text" class="text ">
-          <p><span style="text-decoration:none;">赠与好友</span></p>
+          <p><span style="text-decoration:none;">赠送</span></p>
         </div>
       </div>
 
@@ -275,7 +275,7 @@
       <div id="u653" class="ax_default label">
         <div id="u653_div" class=""></div>
         <div id="u653_text" class="text ">
-          <p><span style="text-decoration:none;">赠与好友</span></p>
+          <p><span style="text-decoration:none;">赠送</span></p>
         </div>
       </div>
 
@@ -283,7 +283,7 @@
       <div id="u654" class="ax_default label">
         <div id="u654_div" class=""></div>
         <div id="u654_text" class="text ">
-          <p><span style="text-decoration:none;">自己使用</span></p>
+          <p><span style="text-decoration:none;">自用</span></p>
         </div>
       </div>
 
@@ -291,7 +291,7 @@
       <div id="u655" class="ax_default sticky_1">
         <div id="u655_div" class=""></div>
         <div id="u655_text" class="text ">
-          <p><span style="text-decoration:none;">支付结果页，选择“赠与好友”，使用详情展示“赠与好友”；选择送给自己，使用详情展示自己使用</span></p>
+          <p><span style="text-decoration:none;">支付结果页，选择“赠送”，使用详情展示“赠送”；点击使用，使用详情展示“自用”</span></p>
         </div>
       </div>
 
